--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> CoronaWhy</h3>
                 <h4> Lead Machine Learning Researcher</h4>
                 <p>
-                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including extracting adverse drug events, clustering COVID-19 literature, and forecasting COVID-19 spread. I'm currently leading a team of data scientists, data engineers, and epidemiologists to create models to forecast COVID-19 spread and develop casual models to gauge policy impacts.
+                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including <a href="https://github.com/CoronaWhy/task-vt/blob/master/src/relation_extraction_model/re_model.py"> extracting adverse drug events </a>, <a href="https://www.kaggle.com/isaacmg/scibert-embeddings"> clustering COVID-19 literature </a>, and <a href="https://github.com/isaacmg?org=CoronaWhy&year_list=1"> forecasting COVID-19 spread </a>. I'm currently  leading a team of data scientists, data engineers, and epidemiologists to create models to forecast COVID-19 </a> spread and develop casual models to gauge policy impacts.
                 </p>
     
             </div>
