--- a/index.html
+++ b/index.html
@@ -400,11 +400,12 @@ Includes detailed information about all my recent projects and interests."/>
                         <p>
                             Initially, a repository to forecast flash floods and stream flows, flow evolved to serve as a general time series forecasting libray. We are currently using flow forecast to forecast COVID cases around the U.S. as well as study transfer learning training on flow, wind, and solar data.
                         </p>
-                        <a href="https://github.com/AIStream-Peelout>View Project</a>
+                        <a href="https://github.com/AIStream-Peelout"> View Project </a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 </div>
+				 
 		    <div class="project shadow-large">
 			    <div class="project-image">
                         <img src="https://cnet3.cbsistatic.com/img/QTocY2Ro4mlPnTzOVwHQ-ekWfJQ=/1092x0/2014/04/21/e49e17f7-0397-4773-882f-5d060b6b4595/westerosmap.jpg" height=300px width=350px />
