add some more info

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> CoronaWhy</h3>
                 <h4> Lead Machine Learning Researcher</h4>
                 <p>
-                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including <a href="https://github.com/CoronaWhy/task-vt/blob/master/src/relation_extraction_model/re_model.py"> extracting adverse drug events </a>, <a href="https://www.kaggle.com/isaacmg/scibert-embeddings"> clustering COVID-19 literature </a>, and <a href="https://github.com/isaacmg?org=CoronaWhy&year_list=1"> forecasting COVID-19 spread </a>. I'm currently  leading a team of data scientists, data engineers, and epidemiologists to create models to forecast COVID-19 </a> spread and develop casual models to gauge policy impacts.
+                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including <a href="https://github.com/CoronaWhy/task-vt/blob/master/src/relation_extraction_model/re_model.py"> extracting adverse drug events </a>, <a href="https://www.kaggle.com/isaacmg/scibert-embeddings"> clustering COVID-19 literature </a>, and <a href="https://github.com/isaacmg?org=CoronaWhy&year_list=1"> forecasting COVID-19 spread </a>. I'm currently leading a team of data scientists, data engineers, and epidemiologists to create models to forecast COVID-19 </a> spread and develop casual models to gauge policy impacts. We are also spending significant time to continue to develop Flow Forecast, an open-source deep learning for time series forecasting framework built in PyTorch.
                 </p>
     
             </div>
@@ -205,8 +205,8 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> Monster.com</h3>
                 <h4> Data and Machine Learning Engineer</h4>
                 <p>
-                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
-                 Additionally, part of my time goes to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery
+                 I developed and fine-tuned PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
+                 Additionally, part of my time went to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery
                 </p>
     
             </div>
